@@ -39,6 +39,7 @@ Bugs fixed
 - Bug 2138 - SimpleNetDevice could send overlapped packets
 - Bug 2153 - Incorrect power limits in wifi power control algorithms
 - Bug 2154 - Incorrect power calculation in wifi power adaptation examples
+- Bug 2156 - Duplicate packets when using two level aggregation
 
 Known issues
 ------------
